update swagger.yaml with GET /users endpoint
